--- a/test/workbench/app/views/layouts/application.html.erb
+++ b/test/workbench/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <script src="/lookbook-assets/js/lookbook.js?v=<%= Lookbook.version %>" defer></script>
   </head>
 
-  <body style="padding: 24px">
+  <body style="padding: 24px; overflow: auto;">
     <%= yield %>
   </body>
 </html>
