--- a/app/views/lookbook/index.html.erb
+++ b/app/views/lookbook/index.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full w-full">
+<div id="welcome-message" class="flex flex-col h-full w-full">
   <div class="flex flex-col items-center justify-center h-full">
     <div class="p-4 text-center mx-auto">
       <%= render_component :icon, name: :layers, size: 10, class: "opacity-30 mx-auto" %>
