--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -24,9 +24,10 @@
       x-show="tab === 'preview'"
       @viewport:loaded="loadResizer"
       @dom:update-complete="loadResizer"
-      @viewport:resize-progress="resizeIframe($event.detail.width)">
+      @viewport:resize-progress="resizeIframe($event.detail.width)"
+      @viewport:resize-complete="resizeIframe($event.detail.width)">
       <%= render_component :viewport,
-        helpers.lookbook.preview_path(@example.path, @params.merge(lookbook_embed: true)),
+        src: helpers.lookbook.preview_path(@example.path, @params.merge(lookbook_embed: true)),
         alpine_data: "store",
         resize_height: false,
         class: "mb-[-2px]" %>
