--- a/app/components/lookbook/code/highlight_github_light.css
+++ b/app/components/lookbook/code/highlight_github_light.css
@@ -14,8 +14,8 @@
         font-style: italic;
       }
       & .err {
-        color: #a61717;
-        background-color: #e3d2d2;
+        /* color: #a61717;
+        background-color: #e3d2d2; */
       }
       & .k {
         font-weight: bold;
