--- a/app/views/lookbook/previews/panels/_params.html.erb
+++ b/app/views/lookbook/previews/panels/_params.html.erb
@@ -8,7 +8,7 @@
   <div class="py-3 h-full">
     <%= render_component :param_fieldset do |fieldset| %>
       <% @example.params.each do |param| %>
-        <% fieldset.param_field **param %>
+        <% fieldset.field **param, value: params[param[:name]] %>
       <% end %>
     <% end %>
   </div>
