More component specs and previews

--- a/workbench/app/views/layouts/application.html.erb
+++ b/workbench/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+  <html>
   <head>
     <title>Workbench</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -8,24 +8,10 @@
 
     <link href="/lookbook-assets/css/lookbook.css?v=<%= Lookbook::VERSION %>" rel="stylesheet">
     <script src="/lookbook-assets/js/lookbook.js?v=<%= Lookbook.version %>" defer></script>
-    <script>
-      window.addEventListener('DOMContentLoaded', function() {
-        Alpine.store("workbench", {
-          filter: {
-            raw: "",
-            get text() {
-              return this.raw.replace(/\s/g, "").toLowerCase();
-            },
-            get active() {
-              return this.text.length > 0;
-            },
-          }
-        });    
-      });
-    </script>
   </head>
-
   <body style="padding: 24px; overflow: auto; max-width: 1200px; margin: 0 auto;">
-    <%= yield %>
+    <div x-data="app">
+      <%= yield %>
+    </div>
   </body>
 </html>
