--- a/app/components/lookbook/tabbed_content/section/component.html.erb
+++ b/app/components/lookbook/tabbed_content/section/component.html.erb
@@ -3,8 +3,6 @@
   x_ref: @ref,
   x_cloak: true,
   class: "h-full",
-  ":class": "{
-    hidden: !isActive($el)
-  }" do %>
+  ":class": "{ hidden: !isActive($el) }" do %>
   <%= content %>
 <% end %>
