--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -2226,6 +2226,10 @@ pre[class*="language-"] {
   border-bottom-width: 2px;
 }
 
+.border-t-0 {
+  border-top-width: 0;
+}
+
 .border-dashed {
   border-style: dashed;
 }
