More workbench, specs and component uodates

--- a/app/components/lookbook/dimensions_display/component.html.erb
+++ b/app/components/lookbook/dimensions_display/component.html.erb
@@ -1,4 +1,4 @@
-<%= render_component_tag class: "flex items-center text-xs font-mono space-x-1 opacity-30 hover:opacity-100 transition",
+<%= render_component_tag class: "flex items-center text-xs font-mono space-x-1 transition",
   ":class":"{'!opacity-100': resizing}",
   "@viewport:resize-start.window": "resizing = true",
   "@viewport:resize-complete.window": "resizing = false",
