--- a/workbench/app/previews/tabbed_panels_preview/default.html.erb
+++ b/workbench/app/previews/tabbed_panels_preview/default.html.erb
@@ -11,7 +11,7 @@
 
 <%= render Lookbook::TabbedContent::Component.new(
   alpine_data: "$store.workbench.tabbedPanels",
-  class: "border border-gray-300 border-t-0 p-4"
+  class: "border border-gray-300 border-t-0 p-4 max-h-[400px]"
 ) do |content| %>
   <% content.section do %>
     First panel
