--- a/workbench/app/views/layouts/application.html.erb
+++ b/workbench/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
   <head>
-    <title>Workbench</title>
+    <title>Lookbook Workbench</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -9,8 +9,8 @@
     <link href="/lookbook-assets/css/lookbook.css?v=<%= Lookbook::VERSION %>" rel="stylesheet">
     <script src="/lookbook-assets/js/lookbook.js?v=<%= Lookbook.version %>" defer></script>
   </head>
-  <body style="padding: 24px; overflow: auto; max-width: 1200px; margin: 0 auto;">
-    <div x-data="app">
+  <body class="p-8 overflow-auto h-screen<%= " mx-auto" if lookbook_display(:centered) %>" style="max-width: <%= lookbook_display(:max_width, "1200px") %>; max-height: <%= lookbook_display(:max_height, "100vh") %>;">
+    <div x-data="app" class="h-full w-full">
       <%= yield %>
     </div>
   </body>
