More UI polishing

--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -24,12 +24,13 @@
       x-show="tab === 'preview'"
       @viewport:loaded="loadResizer"
       @dom:update-complete="loadResizer"
-      @viewport:resize-progress="resizeIframe($event.detail.width)"
-      @viewport:resize-complete="resizeIframe($event.detail.width)"> 
+      @viewport:resize-progress="resizeIframe"
+      @viewport:resize-complete="resizeIframe"> 
       <%= render_component :viewport,
         src: helpers.lookbook.preview_path(@example.path, @params.merge(lookbook_embed: true)),
         alpine_data: "store",
         resize_height: false,
+        max_height: @max_height,
         class: "mb-[-2px]" %>
     </div>
 
